--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
@@ -60,7 +60,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="laytable-cell-14-0-2">
-                                        <a href="@info.Hub" target="_blank">@info.Hub</a>
+                                        @info.Hub
                                     </div>
                                 </td>
                                 <td data-field="Items">
