调整修改成功后的提示框（JS）

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
@@ -317,7 +317,7 @@
             {
                 await _iocManager.Resolve<IBuildService>().Success(_clusterId, project, 0);
                 await GetList();
-                await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 1, title = "执行结果"});
+                await js.InvokeVoidAsync("layer.msg", runShellResult.OutputBr, new {icon = 1, title = "执行结果"});
             }
         }
         catch (Exception e)
