--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
@@ -149,7 +149,7 @@
         if (gitResult.IsError) await js.InvokeVoidAsync("layer.alert", gitResult.OutputBr, new {icon = 2, title = "清除失败"});
         else
         {
-            await js.InvokeVoidAsync("layer.alert", "清除完毕", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "清除完毕", new {icon = 1});
         }
     }
 
