--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Add.razor
@@ -55,7 +55,7 @@
                 throw new Exception("管理员名称、登陆密码必须填写。");
             }
             await _iocManager.Resolve<IAdminService>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
