--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Update.razor
@@ -100,7 +100,7 @@
             }
 
             await _iocManager.Resolve<IAdminService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "修改成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
