--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Add.razor
@@ -63,7 +63,7 @@
                 throw new Exception("Git名称、托管地址必须填写。");
             }
             await _iocManager.Resolve<IDockerHubService>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
