--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Update.razor
@@ -78,7 +78,7 @@
             }
 
             await _iocManager.Resolve<IDockerHubService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "修改成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
