--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
@@ -80,7 +80,7 @@
             }
             _info.Id=await _iocManager.Resolve<ITaskGroupAdd>().AddAsync(_info);
             await _iocManager.Resolve<ITaskAdd>().GetOrCreateAsync(_info.Id);
-            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
             nav.NavigateTo("/fss/task_group/list");
         }
         catch (Exception e)
