--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Update.razor
@@ -85,7 +85,7 @@
             }
             
             await _iocManager.Resolve<IGitService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "修改成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
