--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
@@ -82,7 +82,7 @@
         try
         {
             await _iocManager.Resolve<IYamlTplService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "修改成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
