--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
@@ -71,7 +71,7 @@
             }
 
             await _iocManager.Resolve<IProjectGroupService>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
+            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
             nav.NavigateTo("/project_group/list");
         }
         catch (Exception e)
