--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -32,6 +32,10 @@
             }
         }
         <div class="layui-right">
+            @if (_info.Status != EumBuildStatus.Building)
+            {
+                <button class="layui-btn layui-btn-sm layui-btn-danger" @onclick="AddBuild">构建</button>
+            }
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
     </div>
@@ -148,4 +152,20 @@
         return ValueTask.CompletedTask;
     }
 
+    /// 构建
+    private async Task AddBuild()
+    {
+        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
+        try
+        {
+            await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
+            await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
+            GotoList();
+        }
+        catch (Exception e)
+        {
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "加入失败"});
+        }
+        await js.InvokeVoidAsync("layer.close", load);
+    }
 }
