--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -34,7 +34,7 @@
         <div class="layui-right">
             @if (_info.Status != EumBuildStatus.Building)
             {
-                <button class="layui-btn layui-btn-sm layui-btn-danger" @onclick="AddBuild">构建</button>
+                <button class="layui-btn layui-btn-danger" @onclick="AddBuild">构建</button>
             }
             <button class="layui-btn" @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
         </div>
