--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -158,9 +158,9 @@
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         try
         {
-            await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
+            var buildId=await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
             await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
-            GotoList();
+            nav.NavigateTo($"/builder/log/{buildId}");
         }
         catch (Exception e)
         {
