修改构建日志详情页不刷新

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -162,6 +162,7 @@
             await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
             _isFirst = false;
             nav.NavigateTo($"/builder/log/{buildId}");
+            await InvokeAsync(StateHasChanged);
         }
         catch (Exception e)
         {
