--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -158,10 +158,11 @@
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         try
         {
-            var buildId=await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
+            Id = await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
             await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
             _isFirst = false;
-            nav.NavigateTo($"/builder/log/{buildId}");
+            nav.NavigateTo($"/builder/log/{Id}");
+            await OnParametersSetAsync();
             await InvokeAsync(StateHasChanged);
         }
         catch (Exception e)
@@ -170,4 +171,5 @@
         }
         await js.InvokeVoidAsync("layer.close", load);
     }
+
 }
