--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
@@ -71,7 +71,7 @@
         var deployService = _iocManager.Resolve<IDeployService>();
         try
         {
-            var runShellResult = await deployService.DeployAsync(_yaml, clusterVO);
+            var runShellResult = await deployService.DeployAsync("single",_yaml, clusterVO);
             if (runShellResult.IsError) await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 2, title = "出错了"});
             else await js.InvokeVoidAsync("layer.msg", runShellResult.OutputBr, new {icon = 1, title = "执行结果"});
         }
