--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -4,6 +4,7 @@
 @using FOPS.Abstract.Fss.Entity
 @using FS.Extends
 @using System.Timers;
+@using Newtonsoft.Json
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -116,6 +117,7 @@
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-9">
                                         <button class="layui-btn layui-btn-sm" @onclick="() => GotoUpdate(info.Id)">编辑</button>
+                                        <button class="layui-btn layui-btn-sm layui-btn-normal" @onclick="() => Copy(info)">复制</button>
                                     </div>
                                 </td>
                             </tr>
@@ -138,7 +140,7 @@
     .laytable-cell-14-0-6{ width: 150px; }
     .laytable-cell-14-0-7{ width: 80px; }
     .laytable-cell-14-0-8{ width: 80px; }
-    .laytable-cell-14-0-9{ width: 80px; }
+    .laytable-cell-14-0-9{ width: 150px; }
 </style>
 
 @code{
@@ -184,10 +186,10 @@
 
     private async Task GetList()
     {
-        _lst        = await _iocManager.Resolve<ITaskGroupList>().ToListAsync() ?? new();
-        _lst        = _lst.OrderByDescending(o => o.Id).ToList();
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAsync() ?? new();
+        _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
-        _lst        = _lst.ToList(_pageSize, PageIndex);
+        _lst = _lst.ToList(_pageSize, PageIndex);
     }
 
     private string GetTimeSetting(TaskGroupVO group)
@@ -213,4 +215,26 @@
     {
         nav.NavigateTo($"/fss/task_group/update/{id}");
     }
+
+    /// 复制项目
+    private async Task Copy(TaskGroupVO info)
+    {
+        var newInfo = JsonConvert.DeserializeObject<TaskGroupVO>(JsonConvert.SerializeObject(info));
+        newInfo.Caption += "复制";
+        newInfo.Id = 0;
+        newInfo.ActivateAt = DateTime.MinValue;
+        newInfo.NextAt = DateTime.MinValue;
+        newInfo.TaskId = 0;
+        newInfo.RunCount = 0;
+        newInfo.LastRunAt = DateTime.MinValue;
+        newInfo.RunSpeedAvg = 0;
+        if (newInfo.IntervalMs > 0)
+        {
+            newInfo.Cron = newInfo.IntervalMs.ToString();
+            newInfo.IntervalMs = 0;
+        }
+        var id = await _iocManager.Resolve<ITaskGroupAdd>().AddAsync(newInfo);
+        nav.NavigateTo($"/fss/task_group/update/{id}");
+    }
+
 }
