--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
@@ -82,16 +82,16 @@
                 </td>
                 <td>
                     <div class="layui-table-cell laytable-cell-build-3">
-                        @if (info.Status == EumBuildStatus.Building)
+                        @if (info.Status != EumBuildStatus.Finish)
                         {
                             <span>@((DateTime.Now - info.CreateAt).GetDateDesc())</span>
                             <button class="layui-btn layui-btn-radius layui-btn-xs" @onclick="() => CancelBuild(info)">
                                 <i class="layui-icon"></i>
                             </button>
                         }
-                        @if (info.Status == EumBuildStatus.Finish)
+                        else
                         {
-                            <span>@((info.FinishAt - info.CreateAt).GetDateDesc())</span>
+                            <span lay-tips="@((info.FinishAt - info.CreateAt).GetDateDesc())"> @info.FinishAt.ToString("MM-dd HH:mm:ss")</span>
                         }
                     </div>
                 </td>
