修改构建列表的时间显示

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
@@ -91,7 +91,7 @@
                         }
                         else
                         {
-                            <span lay-tips="@((info.FinishAt - info.CreateAt).GetDateDesc())"> @info.FinishAt.ToString("MM-dd HH:mm:ss")</span>
+                            <span lay-tips="耗时：@((info.FinishAt - info.CreateAt).GetDateDesc())">@((DateTime.Now - info.FinishAt).GetDateDesc())</span>
                         }
                     </div>
                 </td>
