构建队列列表，未编译的不显示时间

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
@@ -82,7 +82,13 @@
                 </td>
                 <td>
                     <div class="layui-table-cell laytable-cell-build-3">
-                        @if (info.Status != EumBuildStatus.Finish)
+                        @if (info.Status == EumBuildStatus.None)
+                        {
+                            <button class="layui-btn layui-btn-radius layui-btn-xs" @onclick="() => CancelBuild(info)">
+                                <i class="layui-icon"></i>
+                            </button>
+                        }
+                        else if (info.Status == EumBuildStatus.Building)
                         {
                             <span>@((DateTime.Now - info.CreateAt).GetDateDesc())</span>
                             <button class="layui-btn layui-btn-radius layui-btn-xs" @onclick="() => CancelBuild(info)">
