获取项目信息时，需要检查Null

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
@@ -330,6 +330,8 @@
             shadeClose= true,
             content= "<div style='padding:20px;'>" +
                      "<ul>" +
+                     "<li>Fops_DirRoot：Fops根目录</li>" +
+                     "<li>NpmModules_DirRoot：NpmModules目录</li>" +
                      "<li>Git_Hub：Git仓库地址</li>" +
                      "<li>Git_DirRoot：Git仓库源代码目录</li>" +
                      "<li>Build_Number：构建版本号</li>" +
@@ -339,9 +341,12 @@
                      "<li>Project_EntryPort：程序启动端口</li>" +
                      "<li>Project_ReleaseDirRoot：编译保存的目录</li>" +
                      "<li>Project_SourceDirRoot：项目源代码目录</li>" +
+                     "<li>Project_GitDirRoot：Git仓库源代码根目录</li>" +
                      "<li>Docker_FilePath：Dockerfile文件路径</li>" +
                      "<li>Docker_Hub：Docker仓库地址</li>" +
                      "<li>Docker_Image：Docker镜像</li>" +
+                     "<li>ReleaseDirRoot：编译保存的根目录</li>" +
+                     "<li>Kube_Path：kubectlConfig配置</li>" +
                      "</ul>" +
                      "</div>"
         });
