--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
@@ -168,6 +168,7 @@
 .laytable-cell-task-6 {width: 80px;}
 .laytable-cell-task-7 {width: 120px;}
 .laytable-cell-task-8 {width: 150px;}
+.laytable-cell-task-9 {width: 80px;}
 </style>
 
 @code{
