--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
 
         <!-- 页面标签 -->
         <div class="layadmin-pagetabs" id="LAY_app_tabs">
-            <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
+            <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage" onclick="history.go(-1);"></div>
             <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
             <div class="layui-icon layadmin-tabs-control layui-icon-down">
                 <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
