--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/PageSplit.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/PageSplit.razor
@@ -29,7 +29,7 @@
 
 @code {
     [Parameter] public int PageIndex { get; set; }
-    [Parameter] public int TotalCount { get; set; }
+    [Parameter] public long TotalCount { get; set; }
     [Parameter] public int PageSize { get; set; }
     [Parameter] public string PageUrl { get; set; }
 
